fix: use new API